# fusion360_mcp

./: .bumpversion.toml  .gitignore  .mcp.json  .mcp.json.example  =0.26.0  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEEDBACK.md  LICENSE  LIMITATIONS.md  PROMPT.md  README.md  REWRITE_PLAN.md  SECURITY.md  SPECIFICATION.md  cliff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
FusionAddin/: FusionMCP.manifest  FusionMCP.py
FusionAddin/core/: __init__.py  entity_registry.py  event_manager.py  http_server.py  task_queue.py
FusionAddin/handlers/: __init__.py  assembly_handlers.py  creation_handlers.py  modification_handlers.py  query_handlers.py  validation_handlers.py  viewport_handlers.py
Server/: README.md  pyproject.toml
Server/src/fusion360_mcp_server/: __init__.py  config.py  exceptions.py  logging.py  main.py
Server/src/fusion360_mcp_server/models/: __init__.py  body.py  design_state.py  feature.py  geometry.py  sketch.py
Server/src/fusion360_mcp_server/services/: __init__.py  fusion_client.py
Server/src/fusion360_mcp_server/tools/: __init__.py  assembly_tools.py  creation_tools.py  modification_tools.py  query_tools.py  system_tools.py  validation_tools.py  viewport_tools.py
Server/tests/: __init__.py  test_fusion_client.py  test_models.py  test_tools.py
docs/: api-reference.md  architecture.md  troubleshooting.md  user-guide.md
scripts/: deploy_addin.sh
shared/: __init__.py  api_schema.py  exceptions.py
(+18 files in other folders)
