[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fusion360-mcp-server"
version = "0.1.2"
description = "MCP Server for Fusion 360 AI-assisted CAD design"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "NCM Labs" }
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ncmlabs/fusion360_mcp"
Documentation = "https://github.com/ncmlabs/fusion360_mcp#readme"
Repository = "https://github.com/ncmlabs/fusion360_mcp"
Issues = "https://github.com/ncmlabs/fusion360_mcp/issues"
Changelog = "https://github.com/ncmlabs/fusion360_mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "bump-my-version>=0.26.0",
]

[project.scripts]
fusion360-mcp = "fusion360_mcp_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fusion360_mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
